exemplo de chamada

--- a/API_PUCCOINS/Web.config
+++ b/API_PUCCOINS/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="API_PUCCOINSContext" connectionString="Data Source=GRACE-PC\SQLExpress;Initial Catalog=PUCCOINS;User ID=gracedrs;Password=123456;Pooling=false" providerName="System.Data.SqlClient" />
+    <!--<add name="API_PUCCOINSContext" connectionString="Data Source=GRACE-PC\SQLExpress;Initial Catalog=PUCCOINS;User ID=gracedrs;Password=123456;Pooling=false" providerName="System.Data.SqlClient" />-->
+    <add name="API_PUCCOINSContext" connectionString="Server=tcp:puc-dad-2019-gr.database.windows.net,1433;Initial Catalog=PUCCOINS_db;Persist Security Info=False;User ID=gracedrs;Password=dad#2019;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
